--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,14 @@ body {
 #wrap1{
   height : 100%;
   width : 100%;
+  max-width: 75vh;
   margin: 0 auto;
 }
 
 #wrap2{
   height : 100%;
   width : 0;
+  max-width: 75vh;
   margin: 0 auto;
 }
 
